﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.80	.exe
  6 сентября 2024 18:15
  
  [-] Исправлена ошибка печати шрифтом B
  
*******************************************************************

  OposWebKassa_0.79.exe
  2 сентября 2024 16:50
  
  [-] Исправлена ошибка печати налога на чеке
  
*******************************************************************

  OposWebKassa_0.78.exe
  2 сентября 2024 10:50
  
  [+] Добавлена печать БСН/БИН в чеке и в шаблоне чека
  
*******************************************************************

  OposWebKassa_0.76.exe
  29 августа 2024 12:55
  
  [-] Исправлены ошибки печати в кодировке UTF8
  
*******************************************************************

  OposWebKassa_0.75.exe
  23 августа 2024 17:36
  
  [-] Исправлена ошибка передачи платежей в пустом чеке

*******************************************************************

  OposWebKassa_0.74.exe
  22 августа 2024 18:06
  
  [+] Сделана поддержка печати в UTF8 для принтера OA-48
  
*******************************************************************

  OposWebKassa_0.73.exe
  23 июля 2024 12:06
  
  [-] Изменено место хранения тех параметров драйвера, которые могут 
      меняться самим драйвером. Например, заголовок и подвал чека. 
      Было HKEY_CURRENT_USER, стало HKEY_LOCAL_MACHINE
  
*******************************************************************

  OposWebKassa_0.72.exe
  22 июля 2024 19:35
  
  [-] Сделаны изменения, чтобы была возможна работа с локальным сервером
  
*******************************************************************

  OposWebKassa_0.71.exe
  17 июля 2024 15:25
  
  [+] Добавлена возможность печати в кодировке utf8
  
*******************************************************************
