@@ -1,6 +1,6 @@
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 1,13,0,80
-PRODUCTVERSION 1,13,0,80 
+FILEVERSION 1,13,0,81
+PRODUCTVERSION 1,13,0,81 
 FILEFLAGSMASK 0x3fL
 FILEFLAGS 0x0L
 FILEOS 0x4L
@@ -13,7 +13,7 @@ BEGIN
     BEGIN
       VALUE "CompanyName", "SHTRIH-M\0"
       VALUE "FileDescription", "WebKassa OPOS setup utility\0"
-      VALUE "FileVersion", "1.13.0.80\0"
+      VALUE "FileVersion", "1.13.0.81\0"
       VALUE "InternalName", "WebKassa OPOS setup \0"
       VALUE "LegalCopyright", "SHTRIH-M \251 2013 \0"
       VALUE "OriginalFilename", "OposConfig.exe\0"
