@@ -6,7 +6,14 @@
 
 *******************************************************************
 
-  OposWebKassa_0.80	.exe
+  OposWebKassa_0.81.exe
+  1 октября 2024 18:00
+  
+  [-] Исправлена ошибка запроса GetData(FPTR_GD_Z_REPORT)
+  
+*******************************************************************
+
+  OposWebKassa_0.80.exe
   6 сентября 2024 18:15
   
   [-] Исправлена ошибка печати шрифтом B
